Implementing web temps reel chat

--- a/package.json
+++ b/package.json
@@ -18,5 +18,12 @@
     "nodejs"
   ],
   "author": "Wendy",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "expres": "^0.0.5",
+    "socket.io": "^4.5.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
+  }
 }
