--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "type": "git",
     "url": "(https://github.com/WendyAfrim/chat_app.git)"
   },
+  "type": "module",
   "keywords": [
     "chat",
     "socket",
@@ -23,6 +24,7 @@
   "dependencies": {
     "expres": "^0.0.5",
     "socket.io": "^4.5.3",
+    "socket.io-client": "^4.5.3",
     "vite": "^4.0.0"
   },
   "devDependencies": {
