--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "expres": "^0.0.5",
     "express": "^4.18.2",
     "socket.io": "^4.5.3",
-    "socket.io-client": "^4.5.3",
-    "vite": "^4.0.0"
+    "socket.io-client": "^4.5.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
