--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,8 +2,7 @@ version: "3"
 
 services:
   node:
-    image: node:18.0.0-alpine
-    user: node
+    image: node:lts-alpine3.16
     working_dir: /home/node
     tty: true
     stdin_open: true
@@ -12,3 +11,36 @@ services:
       - 8000:8000
     volumes:
       - .:/home/node
+    networks:
+      - dev
+  
+  postgres:
+    image: postgres:13.2-alpine
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: postgres
+    ports:
+      - 5432:5432
+    volumes:
+      - datadb:/var/lib/postgresql/data
+    networks:
+      - dev
+
+  adminer:
+    image: adminer:4.8.1
+    container_name: adminer_docker_socket
+    restart: always
+    depends_on:
+      - postgres
+    ports:
+      - 8080:8080
+    environment:
+      ADMINER_DESIGN: nette
+    networks:
+      - dev
+volumes:
+  datadb:
+
+networks:
+  dev:
