--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "dependencies": {
     "expres": "^0.0.5",
     "express": "^4.18.2",
+    "pg": "^8.8.0",
+    "postgres-pool": "^6.0.7",
     "socket.io": "^4.5.3",
     "socket.io-client": "^4.5.3"
   },
